[metadata]
name = celery-redbeat
description = A Celery Beat Scheduler using Redis for persistent storage
version = 2.3.3
license = Apache License, Version 2.0

author = Marc Sibson
url = https://github.com/sibson/redbeat
long_description = file: README.rst
keywords = python, celery, beat, redis, scheduler

classifiers=
        Development Status :: 5 - Production/Stable
        License :: OSI Approved :: Apache Software License
        Topic :: System :: Distributed Computing
        Topic :: Software Development :: Object Brokering
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Programming Language :: Python :: 3.13
        Programming Language :: Python :: Implementation :: CPython
        Operating System :: OS Independent

[options]
packages = redbeat
python_requires = >=3.9
install_requires =
        redis>=3.2
        celery>=5.0
        python-dateutil
        tenacity
setup_requires =
    pbr

[flake8]
max-line-length: 100
black-config = ./pyproject.toml

[bdist_wheel]
universal = 1

[tool:pytest]
# ... if you use pytest ...

[pbr]
version = 2.3.3
